<resources>
    <string name="app_name">Balance</string>
    <string name="account_button_name">Create an Account</string>
    <string name="log_in_button_name">Log in</string>

    <!--Strings needed for set-up-->
    <string name="continue_button_name">Continue</string>
    <string name="set_continue_but">Set &amp; Continue</string>
    <string name="email_started">Let\'s Get Started</string>
    <string name="question_email">What is your email address?</string>

    <string name="profile_statement">Create Your Profile</string>
    <string name="name_statement">What is your legal name?</string>
    <string name="phone_statement">What Is Your Phone Number?</string>
    <string name="verify_statement">Verify your Identity</string>
    <string name="verify_detail_statement">Balance is required by federal law (US Patriot Act) to
    collect your Social Security Number.</string>
    <string name="superhero_more_info">For more information ask our superhero up top ^</string>
    <string name="lock_text">Your information is encrypted and securely transmitted using SSL</string>

    <string name="dob">Date of Birth</string>
    <string name="dob_detail">US federal law requires all financial advisors to collect this information</string>

    <string name="citizenship_statement">US federal law requires Balance to collect this information to help
    prevent money laundering</string>
    <string name="complete_detail">That\'s it, you\'re all verified. Continue on forward to choose what values are most
    important to you and set your risk tolerance. Remember, at Balance we only invest your money in socially
    responsible investments that align with your values.</string>
    <string name="hero_completion">Superhero Tip: You can rearrange your value order at anytime</string>

    <string name="values_yellow_text">+Trending : Diversity (3.5%) </string>
    <string name="values_explain">Drag to place in order. Values at the top will be considered first when
    selecting your investments. </string>

    <string name="values">VALUES</string>

    <string name="select_profile">Select This Portfolio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cdc_statement">Link a card</string>
    <string name="cdc_detail_statement">Connect your bank account so we can auto-round up
    your purchases.</string>

    <string name="choose_style">CHOOSE YOUR INVESTMENT STYLE</string>
    <string name="hero_page_explain">Select what type of investments fit your goals.
        Conservative styles will typically have lower earnings but more stability.
        Aggressive styles tend to have higher earnings but are less stable.
        Remember, with great power comes great responsibility. Choose wisely.</string>

    <string name="hero_intro">G\'DAY I\'M YOUR HELP HERO</string>
    <string name="hero_detail">Find me in the top right corner of your Balance app,
        I\'ll be the handsome looking chap waiting to provide you with tips, secrets and explanations
        that will help you become a Balance rockstar in no time.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="view_investment_explain_text">Kelsey, did you know that Google plans to run entirely on clean energy in 2017? You value the environment so we\'ve included Google in your ETF portfolio. Go green!</string>

    <string name="one">NEWS: Snap Inc forms a new foundation supporting
arts and education, vows to donate up to 13Mn shares</string>
    <string name="two">INVESTOR ALERT: Brower Priven Encourages Shareholders
Who Have Losses in excess of $10,000 From Investment in SNAP, INC to contact
Brower Priven Before The Lead Plaintiff Deadline</string>
    <string name="three">NEWS: Good looks - Snapchat, Facebook roll out built
in charitable functions</string>
</resources>
