<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hwhong.balance.SetupViews.VerificationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@drawable/blur_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/verification_continue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:alpha="0.75"
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/continue_button_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/verification_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="61dp"
            android:text="@string/verify_statement"
            android:textColor="@color/white"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/verification_detail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/verification_continue"
            android:layout_alignStart="@+id/verification_continue"
            android:layout_below="@+id/verification_tv"
            android:layout_marginTop="12dp"
            android:text="@string/verify_detail_statement"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verification_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/superhero_more_info"
            android:textColor="@color/yellow"
            android:textSize="10dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/lock"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignLeft="@+id/more_info"
            android:layout_alignStart="@+id/more_info"
            android:layout_alignTop="@+id/lock_text"
            android:alpha="0.5"
            app:srcCompat="@drawable/lock" />

        <TextView
            android:id="@+id/lock_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/lock_text"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:layout_above="@+id/verification_continue"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3" />

        <ImageView
            android:id="@+id/hero"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/hero" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/privacy"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</FrameLayout>
