<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hwhong.balance.Views.EmailActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@drawable/blur_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/continueBut"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:alpha="0.75"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/continue_button_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/started_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="61dp"
            android:text="@string/email_started"
            android:textColor="@color/white"
            android:textSize="27dp" />

        <TextView
            android:id="@+id/question_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/started_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/question_email"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:typeface="monospace" />
    </RelativeLayout>

</FrameLayout>
