<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hwhong.balance.Views.DobActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@drawable/blur_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/dob_continue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:alpha="0.75"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/continue_button_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/dob_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="61dp"
            android:text="@string/dob"
            android:textColor="@color/white"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/dob_detail"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/dob_continue"
            android:layout_alignLeft="@+id/dob_continue"
            android:layout_alignRight="@+id/dob_continue"
            android:layout_alignStart="@+id/dob_continue"
            android:layout_below="@+id/dob_tv"
            android:layout_marginTop="12dp"
            android:text="@string/dob_detail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/dob_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dob_detail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="MM/DD/YYYY"
            android:textSize="21dp"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="@color/white" />


    </RelativeLayout>

</FrameLayout>

