<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hwhong.balance.PostSetUp.CreditCardActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/cdc_background"
        android:scaleType="fitXY"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/creditcard_continue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:alpha="0.75"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/continue_button_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="57dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/creditcard_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/cdc_statement"
            android:textColor="@color/white"
            android:textSize="26dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="61dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/creditcard_detail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/creditcard_continue"
            android:layout_alignStart="@+id/creditcard_continue"
            android:layout_below="@+id/creditcard_tv"
            android:text="@string/cdc_detail_statement"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/creditcard_tv"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/more_info_cdc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/creditcard_detail"
            android:layout_centerHorizontal="true"
            android:text="@string/superhero_more_info"
            android:textColor="@color/yellow"
            android:textSize="11dp"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/creditcard_detail"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/lock"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignTop="@+id/lock_text"
            android:alpha="0.5"
            app:srcCompat="@drawable/lock"
            android:layout_marginBottom="37dp"
            app:layout_constraintBottom_toTopOf="@+id/creditcard_continue"
            android:layout_marginLeft="94dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/lock_text"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/creditcard_continue"
            android:layout_alignLeft="@+id/cdc_main_img"
            android:layout_alignStart="@+id/cdc_main_img"
            android:text="@string/lock_text"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/creditcard_continue"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/lock"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <ImageView
            android:id="@+id/hero"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="25dp"
            app:srcCompat="@drawable/hero"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/cdc_main_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_info_cdc"
             />

        <Button
            android:id="@+id/later_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="I'll do this later"
            android:textAllCaps="false"
            android:textColor="@color/grayColor"
            android:background="@android:color/transparent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/creditcard_continue" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
